fixed chat not picking height on mobile, added deps

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -8,7 +8,6 @@
   border-radius: 5px;
   outline: none;
   transition: background 0.3s;
-  max-width: 170px;
   width: 100%;
 }
 
