--- a/src/features/ChatUp/ChatUp.css
+++ b/src/features/ChatUp/ChatUp.css
@@ -118,7 +118,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   gap: 1rem;
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 .head-button-container {
@@ -205,18 +205,14 @@
   background-color: #F7F7F8;
   box-sizing: border-box;
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
   padding: 1rem;
   height: 100vh;
 }
 
 .SidePanelContentContainer {
   box-sizing: border-box;
+  height: 100%;
   overflow: auto;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -237,7 +233,6 @@
 }
 
 .SidePanelMediaDescription {
-  padding: 1rem 0;
   font-size: .8rem;
   line-height: 1.2rem;
   color: #565656;
@@ -268,17 +263,10 @@
     transition: transform 0.3s ease-in-out;
     min-width: 100vw;
     transform: translateX(100vw);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    display: unset;
+    overflow: auto;
   }
   .SidePanelContentContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 80%;
   }
   .side-panel.open {
     transform: translateX(-100vw);
@@ -294,7 +282,12 @@
     justify-content: flex-start;
     align-items: flex-start;
   }
-  .head-logo-container {
+  .SidePanelMediaContainer {
+    height: 300px;
+    width: 100%;
+    background-position: top;
+    background-size: auto;
+    background-repeat: repeat;
   }
   .chat-introduction-container {
     padding: .4rem;
